etc/iptables/iptables.rules
# Generated by iptables-save v1.4.10 on Tue Feb  8 16:42:46 2011
*mangle
:PREROUTING ACCEPT [121343380:28802265651]
:INPUT ACCEPT [121330785:28801610123]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [120232262:52642794803]
:POSTROUTING ACCEPT [120232262:52642794803]
:torrred - [0:0]
COMMIT
# Completed on Tue Feb  8 16:42:46 2011
# Generated by iptables-save v1.4.10 on Tue Feb  8 16:42:46 2011
*raw
:PREROUTING ACCEPT [121343380:28802265651]
:OUTPUT ACCEPT [120232262:52642794803]
COMMIT
# Completed on Tue Feb  8 16:42:46 2011
# Generated by iptables-save v1.4.10 on Tue Feb  8 16:42:46 2011
*nat
:PREROUTING ACCEPT [2917067:249425677]
:POSTROUTING ACCEPT [7805518:444305453]
:OUTPUT ACCEPT [7805517:444305413]
COMMIT
# Completed on Tue Feb  8 16:42:46 2011
# Generated by iptables-save v1.4.10 on Tue Feb  8 16:42:46 2011
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [120232262:52642794803]
:evil - [0:0]
:open - [0:0]
-A INPUT -i lo -j ACCEPT 
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT 
-A INPUT -j evil 
-A INPUT -p icmp -j ACCEPT 
-A INPUT -j open 
-A INPUT -p tcp -j REJECT --reject-with tcp-reset 
-A INPUT -p udp -j REJECT --reject-with icmp-port-unreachable 
-A evil -p tcp -m tcp ! --tcp-flags FIN,SYN,RST,ACK SYN -m state --state NEW -j DROP 
-A evil -f -j DROP 
-A evil -p tcp -m tcp --tcp-flags FIN,SYN,RST,PSH,ACK,URG FIN,SYN,RST,PSH,ACK,URG -j DROP 
-A evil -p tcp -m tcp --tcp-flags FIN,SYN,RST,PSH,ACK,URG NONE -j DROP 
-A evil -p icmp -m icmp --icmp-type 8 -j DROP 
-A evil -p icmp -m icmp --icmp-type 5 -j DROP 
-A evil -p icmp -m icmp --icmp-type 9 -j DROP 
-A evil -p icmp -m icmp --icmp-type 10 -j DROP 
-A evil -p icmp -m icmp --icmp-type 17 -j DROP 
-A evil -p icmp -m icmp --icmp-type 18 -j DROP 
-A open -p tcp -m tcp --dport 22 -j ACCEPT 
-A open -p tcp -m tcp --sport 41159 -j ACCEPT 
-A open -p tcp -m tcp --dport 41159 -j ACCEPT 
-A open -p udp -m udp --dport 41159 -j ACCEPT 
-A open -p udp -m udp --sport 41159 -j ACCEPT 
COMMIT
# Completed on Tue Feb  8 16:42:46 2011
